src/test/deca/codegen/valid/created/testClass/selectionexplicite.ass
	TSTO #11
	BOV stack_overflow_error
	ADDSP #23
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.object.equals, R0
	STORE R0, 2(GB)
; code de la table des méthodes de Circle
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.object.equals, R0
	STORE R0, 4(GB)
	LOAD code.Circle.setRadius, R0
	STORE R0, 5(GB)
	LOAD code.Circle.calculateArea, R0
	STORE R0, 6(GB)
; start main program
; Main program
; Beginning of main instructions:
	NEW #2, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.Circle
	POP R2
	STORE R2, 7(GB)
	ADDSP #2
	LOAD 7(GB), R2
	STORE R2, 0(SP)
	LOAD #5, R2
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ Dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	WSTR "Area:"
	ADDSP #1
	LOAD 7(GB), R2
	STORE R2, 0(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ Dereferencement.null
	LOAD 0(R2), R2
	BSR 3(R2)
	SUBSP #1
	LOAD R0, R2
	LOAD R2, R1
	WFLOAT
	WNL
	HALT
; end main program
overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow "
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
Dereferencement.null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur : pile pleine"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
cast_incorrect:
	WSTR "la conversion (cast) est incorrecte"
	WNL
	ERROR
; code de l'initialisation des champs
init.Circle:
	LOAD #0, R0
	LOAD -2(LB), R1
	STORE R0, 1(R1)
	RTS
; code des méthodes
code.Circle.setRadius:
	TSTO #0
	BOV pile_pleine
	ADDSP #16
	PUSH R2
	PUSH R3
	PUSH R4
	PUSH R5
	PUSH R6
	PUSH R7
	PUSH R8
	PUSH R9
	PUSH R10
	PUSH R11
	PUSH R12
	PUSH R13
	PUSH R14
	PUSH R15
	LOAD -3(LB), R2
	LOAD -2(LB), R3
	CMP #null, R3
	BEQ Dereferencement.null
	STORE R2, 1(R3)
	POP R15
	POP R14
	POP R13
	POP R12
	POP R11
	POP R10
	POP R9
	POP R8
	POP R7
	POP R6
	POP R5
	POP R4
	POP R3
	POP R2
	BRA fin_methodes
code.Circle.calculateArea:
	TSTO #0
	BOV pile_pleine
	ADDSP #16
	PUSH R2
	PUSH R3
	PUSH R4
	PUSH R5
	PUSH R6
	PUSH R7
	PUSH R8
	PUSH R9
	PUSH R10
	PUSH R11
	PUSH R12
	PUSH R13
	PUSH R14
	PUSH R15
	LOAD #0x1.91eb86p1, R2
	LOAD -2(LB), R3
	CMP #null, R3
	BEQ Dereferencement.null
	LOAD 1(R3), R3
	FLOAT R3, R3
	MUL R3, R2
	BOV overflow_error
	LOAD -2(LB), R3
	CMP #null, R3
	BEQ Dereferencement.null
	LOAD 1(R3), R3
	FLOAT R3, R3
	MUL R3, R2
	BOV overflow_error
	LOAD R2, R0
	POP R15
	POP R14
	POP R13
	POP R12
	POP R11
	POP R10
	POP R9
	POP R8
	POP R7
	POP R6
	POP R5
	POP R4
	POP R3
	POP R2
	BRA fin_methodes
	BRA etiq_Fincode.Circle.calculateArea
etiq_Fincode.Circle.calculateArea:
	WSTR "sortie de la methode calculateArea sans return"
	WNL
	ERROR
code.object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ if_equal_pour_object.equals
	LOAD #0, R0
	BRA fin_methodes
if_equal_pour_object.equals:
	LOAD #1, R0
	BRA fin_methodes
fin_methodes:
	RTS
