src/test/deca/codegen/invalid/created/testClass/noReturn.ass
	TSTO #10
	BOV stack_overflow_error
	ADDSP #22
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.object.equals, R0
	STORE R0, 2(GB)
; code de la table des méthodes de Q
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.object.equals, R0
	STORE R0, 4(GB)
	LOAD code.Q.abs, R0
	STORE R0, 5(GB)
; start main program
; Main program
; Beginning of main instructions:
	NEW #1, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.Q
	POP R2
	STORE R2, 6(GB)
	ADDSP #2
	LOAD 6(GB), R2
	STORE R2, 0(SP)
	LOAD #0x1.4p2, R2
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ Dereferencement.null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	LOAD R0, R2
	HALT
; end main program
overflow_error:
	WSTR "Error: Overflow during arithmetic operation"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow "
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
Dereferencement.null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur : pile pleine"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : allocation impossible, tas plein"
	WNL
	ERROR
cast_incorrect:
	WSTR "la conversion (cast) est incorrecte"
	WNL
	ERROR
; code de l'initialisation des champs
init.Q:
	RTS
; code des méthodes
code.Q.abs:
	TSTO #1
	BOV pile_pleine
	ADDSP #16
	PUSH R2
	PUSH R3
	PUSH R4
	PUSH R5
	PUSH R6
	PUSH R7
	PUSH R8
	PUSH R9
	PUSH R10
	PUSH R11
	PUSH R12
	PUSH R13
	PUSH R14
	PUSH R15
	LOAD -3(LB), R3
	LOAD #0x0.0p0, R4
	CMP R4, R3
	BLT lower2
	LOAD #0, R3
	BRA notLower2
lower2:
	LOAD #1, R3
notLower2:
	CMP #1, R3
	BNE else2
then2:
	LOAD -3(LB), R3
	OPP R3, R3
	LOAD R3, R0
	POP R15
	POP R14
	POP R13
	POP R12
	POP R11
	POP R10
	POP R9
	POP R8
	POP R7
	POP R6
	POP R5
	POP R4
	POP R3
	POP R2
	BRA fin_methodes
	BRA end_If2
else2:
end_If2:
	BRA etiq_Fincode.Q.abs
etiq_Fincode.Q.abs:
	WSTR "sortie de la methode abs sans return"
	WNL
	ERROR
code.object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	BEQ if_equal_pour_object.equals
	LOAD #0, R0
	BRA fin_methodes
if_equal_pour_object.equals:
	LOAD #1, R0
	BRA fin_methodes
fin_methodes:
	RTS
